# SuperDots

./: .gitignore  CMakeLists.txt  README.md  communication.c  communication.h  dok.odt  gameLogic.c  gameLogic.h  gameWidget.c  gameWidget.h  gameWindow.c  gameWindow.h  gtkHelper.c  gtkHelper.h  main.c  menuWindow.c  menuWindow.h  queue.c  queue.h  save.txt  serializer.c  serializer.h  styles.css  vector.h  win-fifo.c  zapistest
src/: communication.h  fifo.h  gameWindow.h  gtk-talk.c  gtkHelper.h  lin-fifo.c  mathHelper.c  mathHelper.h  menuWindow.h  serializer.c  vector.c
